--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,7 +6,7 @@
         {
             "label": "echo",
             "type": "shell",
-            "command": "gcc",
+            "command": "C:\\mingw64\\bin\\gcc.exe",
             "args": [
                 "-g", 
                 "${file}", 
