--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -31,7 +31,7 @@
             "environment": [],
             "externalConsole": true,
             "MIMode": "gdb",
-            "miDebuggerPath": "C:\\Program Files\\mingw64\\bin\\gdb.exe",// 自己电脑的gdb
+            "miDebuggerPath": "C:\\mingw64\\bin\\gdb.exe",// 自己电脑的gdb
             "preLaunchTask": "echo",//这里和task.json的label相对应
             "setupCommands": [
                 {
